--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "poster-maker",
+  "name": "template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "antd": "5.4.0",
+    "axios": "1.3.4",
+    "classnames": "2.3.2",
+    "immer": "9.0.21",
+    "react": "18.2.0",
+    "react-color": "2.19.3",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.10.0",
+    "zustand": "4.3.7"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "@types/lodash": "4.14.192",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@vitejs/plugin-react": "3.1.0",
+    "less": "4.1.3",
+    "less-loader": "11.1.0",
+    "lodash": "4.17.21",
+    "typescript": "4.9.3",
+    "vite": "4.2.0",
+    "vite-plugin-mock": "2.9.6",
+    "vite-tsconfig-paths": "4.0.8"
   }
 }
