--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-color": "2.19.3",
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
+    "react-textarea-autosize": "8.4.1",
     "zustand": "4.3.7"
   },
   "devDependencies": {
