--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "poster-maker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,7 +16,7 @@
     "react": "18.2.0",
     "react-color": "2.19.3",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.10.0",
+    "react-router-dom": "6.11.2",
     "react-textarea-autosize": "8.4.1",
     "zustand": "4.3.7"
   },
@@ -24,6 +24,7 @@
     "@types/lodash": "4.14.192",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-router-dom": "5.3.3",
     "@vitejs/plugin-react": "3.1.0",
     "less": "4.1.3",
     "less-loader": "11.1.0",
